@@ -10,6 +10,7 @@ Improvements
 Bugfixes
 --------
 - avoid an assert() error in stash_rrset() (!1072)
+- fix SERVFAIL when forwarding and certain CNAME setup (#614, !1070)
 
 
 Knot Resolver 5.1.3 (2020-09-08)
